# bd-tree

./: .gitignore  CMakeLists.txt  README.md  penmp  setup.py  valgrind_py.out
dtree/: __init__.py
dtree.egg-info/: PKG-INFO  SOURCES.txt
release/src/: Makefile  bd-tree  cmake_install.cmake
scripts/: cv_split.py  extract_nf_test.py  rand_split.py  split.py  split_by_field.py  text_to_num_ids.py
src/: CMakeLists.txt  abd_index.hpp  abd_tree.hpp  aux.hpp  bd-tree.hpp  bd_tree.hpp  bd_tree_eval.hpp  d_tree.hpp  d_tree_eval.hpp  dtreemodule.cpp  evaluation.hpp  main.cpp  main2.cpp  main3.cpp  main_err.cpp  main_rank.cpp  metrics.hpp  rank_tree.hpp  ratings.hpp  score.hpp  stats.hpp  types.hpp
test/: CMakeLists.txt  bd_tree_test.cpp  metrics_test.cpp  py_test.py  test_memory.py
util/: basic_log.hpp
